--- a/schedule/index.html
+++ b/schedule/index.html
@@ -44,8 +44,8 @@
     <script type="text/javascript" src="/timezone.js"></script>
     <script type="text/javascript" src="/talks.js"></script>
     <script type="text/javascript">
-        function createTalk(id, speaker, university, title, description, start, duration, moderators, zoom_link, type){
-          zoom_link_html = type == 'cancelled' ? '<b>Cancelled</b>' : `<a href="${zoom_link}" target="_blank">Zoom link for talk</a>`;
+        function createTalk(id, speaker, university, title, description, start, duration, moderators, type, zoom_link, youtube_link){
+          youtube_link_html = type == 'cancelled' ? '<b>Cancelled</b>' : youtube_link != "" ? `<a href="${youtube_link}" target="_blank">YouTube link for talk</a>` : '<span></span>';
           return `
             <p class="title"><a href="/program#${id}">${title}</a></p>
             <div class="schedule-item-details">
@@ -54,9 +54,9 @@
             <div class="talk-time-value schedule-item-details" duration="${duration}" talk_time_utc="${start}"></div>
             <div class="schedule-item-details">
               <div class="talk-desc-icon">
-                <img src="assets/zoom-logo.png" class="talk-img-icon"/>
+                ${type == 'cancelled' ? '&#10060;' : youtube_link != '' ? '<img src="assets/youtube-logo.png" class="talk-img-icon"/>' : ''}
               </div>
-              <div>${zoom_link_html}</div>
+              <div>${youtube_link_html}</div>
             </div>
           `
         }
@@ -64,7 +64,7 @@
         function createTaskFromJs(day, part, sec, talk, obj){
             const speaker_id = obj.speaker.toLowerCase().replace(/[^a-z]/g,'');
             const id = `day_${day}_part_${part}_${sec < 1 ? 'plenary' : 'sec_' + sec}` + (sec < 1 ? '' : `_talk_${talk}`) + `_${speaker_id}`;
-            return createTalk(id, obj.speaker, obj.university, obj.title, obj.description, obj.start, obj.duration, obj.moderators, obj.zoom_link, obj.type);
+            return createTalk(id, obj.speaker, obj.university, obj.title, obj.description, obj.start, obj.duration, obj.moderators, obj.type, obj.zoom_link, obj.youtube_link);
         }
 
         function setupTalks(){
